force-app/main/default/objects/Pricing_Approval__c/Pricing_Approval__c.object-meta.xml
<CustomObject>
    <label>Pricing Approval</label>
    <nameField>
        <label>Pricing Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>