force-app/main/default/objects/Pricing_Approval__c/fields/BD_Head_Approval__c.field-meta.xml
<CustomField>
    <fullName>BD_Head_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BD Head Approval (Level I)</label>
    <type>Checkbox</type>
</CustomField>