force-app/main/default/objects/Pricing_Approval__c/fields/CBO_Approval__c.field-meta.xml
<CustomField>
    <fullName>CBO_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBO Approval (Level II)</label>
    <type>Checkbox</type>
</CustomField>