force-app/main/default/objects/Pricing_Approval__c/fields/Maximum_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Deviation__c</fullName>
    <label>Maximum Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>