force-app/main/default/objects/Pricing_Approval__c/fields/MD_CEO_Approval__c.field-meta.xml
<CustomField>
    <fullName>MD_CEO_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD &amp; CEO Approval (Level III)</label>
    <type>Checkbox</type>
</CustomField>