force-app/main/default/objects/Pricing_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Minimum_Deviation__c</columns>
    <columns>Maximum_Deviation__c</columns>
    <columns>BD_Head_Approval__c</columns>
    <columns>CBO_Approval__c</columns>
    <columns>MD_CEO_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>